--- a/frontend/src/pages/BrowseDatabase.css
+++ b/frontend/src/pages/BrowseDatabase.css
@@ -1,3 +1,4 @@
+@import url('@styles/graphic_chart.css');
 
 .browse-database {
     font-family: Arial, sans-serif;
@@ -14,13 +15,13 @@
   .list-item {
     padding: 10px;
     margin: 5px 0;
-    background-color: #f9f9f9;
-    border: 1px solid #ddd;
-    border-radius: 4px;
+    background-color: var(--primary-color);
+    color: white;
+    border-radius: 10px;
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
   
   .list-item:hover {
-    background-color: #f1f1f1;
+    background-color: var(--secondary-color);
   }
