--- a/frontend/src/pages/ContributePage.css
+++ b/frontend/src/pages/ContributePage.css
@@ -29,7 +29,7 @@
     border-radius: 10px;
     padding: 20px;
     margin: 20px;
-    background-color: var(--background-color);
+    background-color: var(--tertiary-color);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
