add readme, footer, doublons check

--- a/frontend/src/pages/ContributePage.css
+++ b/frontend/src/pages/ContributePage.css
@@ -90,3 +90,8 @@ select option:checked {
     background-color: var(--secondary-color);
     color: white;
 }
+
+.error-message {
+    color: red;
+    margin-top: 10px;
+  }
